# mediasoupdemo

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
audioeffect/: .gitignore  CMakeLists.txt  build.gradle
audioeffect/src/androidTest/java/com/waz/audioeffect/: ExampleInstrumentedTest.java
audioeffect/src/main/: AndroidManifest.xml
audioeffect/src/main/java/com/waz/audioeffect/: AudioEffect.java  AudioEffectStatusHandler.java
audioeffect/src/main/java/com/waz/avs/: AVSystem.java
audioeffect/src/main/java/com/waz/media/manager/: MediaManager.java  MediaManagerListener.java  MediamgrPlay.java
audioeffect/src/main/java/com/waz/media/manager/config/: Configuration.java  MediaConfiguration.java
audioeffect/src/main/java/com/waz/media/manager/context/: IntensityLevel.java
audioeffect/src/main/java/com/waz/media/manager/player/: MPState.java  MediaPlayer.java  MediaPlayerListener.java  MediaSource.java  MediaSourceListener.java  SoundSource.java
audioeffect/src/main/java/com/waz/media/manager/router/: AudioRouter.java  JavaAudioRouter.java
audioeffect/src/main/jni/: audio_effect.cc  com_waz_audioeffect_AudioEffect.h  media_manager.cc
audioeffect/src/main/jni/avs/include/: avs_audummy.h  avs_cryptobox.h  avs_devpair.h  avs_ecall.h  avs_econn.h  avs_econn_fmt.h  avs_extmap.h  avs_iflow.h  avs_jzon.h  avs_lockedqueue.h  avs_log.h  avs_network.h  avs_rest.h  avs_rtpdump.h  avs_store.h  avs_string.h  avs_trace.h  avs_turn.h  avs_uuid.h  avs_vidcodec.h  avs_vidframe.h  avs_wcall.h
audioeffect/src/main/jni/avs/src/audio_effect/: aueffect.c  auto_tune.cpp  auto_tune.h  biquad.cpp  chorus.cpp  find_pitch_lags.h  harmonizer.cpp  harmonizer.h  pace_shift.h  pcm_interface.cpp  pitch_cycler.cpp  pitch_shift.h  reverb.h  wav_interface.cpp
audioeffect/src/main/jni/avs/src/mediamgr/: mediamgr.c  mm_platform_android.c  sound.c
audioeffect/src/test/java/com/waz/audioeffect/: ExampleUnitTest.java
configs/: explanation.md  testdown.sh  testopen.sh  testsha.sh  webrtc_env.md
configs/scripts/: build.sh  build_iosx.sh  build_linux.sh  cpheader.sh  package.sh  version.sh
gradle/wrapper/: gradle-wrapper.properties
mediasoup-client/: CMakeLists.txt  build.gradle  mediasoupclient.md
mediasoup-client/src/androidTest/java/org/mediasoup/droid/: BaseTest.java  DeviceTest.java  ExampleInstrumentedTest.java  FakeTransportListener.java  LoggerTest.java  MediasoupClientTest.java  PeerConnectionTest.java
mediasoup-client/src/androidTest/jni/: parameters_jni.cpp
mediasoup-client/src/main/: AndroidManifest.xml
mediasoup-client/src/main/java/com/waz/audioeffect/: AudioEffect.java
mediasoup-client/src/main/java/com/waz/avs/: AVSystem.java
mediasoup-client/src/main/java/com/waz/log/: LogHandler.java
mediasoup-client/src/main/java/org/mediasoup/droid/: Consumer.java  Device.java  Logger.java  MediasoupClient.java  MediasoupException.java  PeerConnection.java  Producer.java  RecvTransport.java  Transport.java
mediasoup-client/src/main/java/org/webrtc/: RTCUtils.java
mediasoup-client/src/main/jni/: media_manager.cc
mediasoup-client/src/main/jni/include/: com_waz_audioeffect_AudioEffect.h  com_waz_call_MediaManager.h
mediasoupdemo/: build.gradle
mediasoupdemo/libs/: protoo-client-release.aar  protoo-client.aar  webrtc-made-release.aar  webrtc-made.aar
mediasoupdemo/src/androidTest/java/com/jsy/mediasoup/: ExampleInstrumentedTest.java
mediasoupdemo/src/main/: AndroidManifest.xml
mediasoupdemo/src/main/java/com/dongxl/mediasoup/: ConnectPeerAdapter.java  MediasoupMainActivity.java  OtherMediasoupView.java  PeersVideoAdapter.java  SelfMediasoupView.java  UserMediasoupView.java
mediasoupdemo/src/main/res/drawable/: bg_media_box_off.xml
mediasoupdemo/src/main/res/layout/: activity_mediasoup_main.xml  activity_p2p_test.xml  activity_room.xml  activity_room_configuration.xml  activity_splash_screen.xml  adapter_connect_peer.xml  adapter_video_peer.xml  fragment_p2p_connect.xml  item_remote_peer.xml  view_fw_audio.xml  view_me.xml  view_peer.xml  view_peer_view.xml
mediasoupdemo/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
mediasoupdemo/src/main/res/xml/: root_preferences.xml
protoo-client/: build.gradle
protoo-client/src/: build.gradle
webrtc-made/: build.gradle
webrtc-made/src/androidTest/java/org/webrtc/: AndroidVideoDecoderInstrumentationTest.java  Camera1CapturerUsingByteBufferTest.java  Camera1CapturerUsingTextureTest.java  Camera2CapturerTest.java  CameraVideoCapturerTestFixtures.java  DefaultVideoEncoderFactoryTest.java  EglRendererTest.java  ExampleInstrumentedTest.java  FileVideoCapturerTest.java  HardwareVideoEncoderTest.java  LoggableTest.java  MediaCodecVideoEncoderTest.java  NetworkMonitorTest.java  PeerConnectionFactoryTest.java  PeerConnectionTest.java  RendererCommonTest.java  RtcCertificatePemTest.java  SurfaceTextureHelperTest.java  SurfaceViewRendererOnMeasureTest.java  VideoFileRendererTest.java  VideoFrameBufferTest.java  WebRtcJniBootTest.java
webrtc-made/src/main/: AndroidManifest.xml
webrtc-made/src/main/java/org/webrtc/: BuildInfo.java  CameraCapturer.java  CameraSession.java  CandidatePairChangeEvent.java  EglBase.java  EglBase10.java  EglBase10Impl.java  EglBase14.java  EglBase14Impl.java  EncodedImage.java  FakeVideoEncoder.java  GlGenericDrawer.java  HardwareVideoEncoder.java  HardwareVideoEncoderFactory.java  JNILogging.java  LibH264Decoder.java  LibH264Encoder.java  LibvpxH264Decoder.java  LibvpxH264Encoder.java  Logging.java  MediaCodecUtils.java  MediaCodecVideoDecoderFactory.java  MediaCodecWrapper.java  MediaCodecWrapperFactoryImpl.java  NativeAndroidVideoTrackSource.java  NetworkChangeDetector.java  PeerConnectionFactoryInitializationHelper.java  SoftwareVideoDecoderFactory.java  SoftwareVideoEncoderFactory.java  SurfaceTextureHelper.java  TextureBufferImpl.java  VideoEncoder.java  VideoEncoderWrapper.java  VideoFrame.java
(+107 files in other folders)
